# arithmetic-parser

./: Cargo.toml  README.md  install.sh  rust.yml
scripts/: postinstall
